Fix past log blockquote margin on mobile

--- a/sass/views/_diary.scss
+++ b/sass/views/_diary.scss
@@ -247,6 +247,11 @@ body.single-diary {
         .post-past__content-excerpt blockquote {
           margin: 2rem auto;
           padding: 0 2rem;
+
+          @media (max-width: 640px) {
+            margin-left: 0;
+            margin-right: 0;
+          }
         }
       }
 
